--- a/package.json
+++ b/package.json
@@ -26,15 +26,10 @@
   "type": "module",
   "dependencies": {
     "@iconify/json": "^2.2.130",
-    "gsap": "^3.12.2",
     "pocketbase": "^0.18.3",
     "quill": "^1.3.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-particles": "^2.12.2",
     "svelte-hamburger": "^1.0.1",
     "svelte-lexical": "^0.3.4",
-    "svelte-lightbox": "^1.1.2",
-    "tsparticles": "^2.12.0"
+    "svelte-lightbox": "^1.1.2"
   }
 }
